--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="{% url 'account:signup' %}">signup</a>
+              <a class="nav-link active" aria-current="page" href="">signup</a>
               <a class="nav-link" href="#">Features</a>
               <a class="nav-link" href="#">Pricing</a>
               <a class="nav-link disabled" aria-disabled="true">Disabled</a>
